src/snapshots/changesette__changeset__tests__parses_an_empty_file_written_by_the_upstream_cli.snap
---
source: src/changeset.rs
expression: "load_ok(\"upstream-empty\")"
---
[
    LoadedChange {
        file_name: "tricky-roses-poke.md",
        releases: [],
        summary: "",
    },
]
