src/snapshots/changesette__changeset__tests__parses_an_empty_frontmatter_with_a_summary.snap
---
source: src/changeset.rs
expression: "load_ok(\"empty-with-summary\")"
---
[
    LoadedChange {
        file_name: "changesette-01H455WZ0H1X9PE0QB0MV1P1KG.md",
        releases: [],
        summary: "An empty changeset, as `changeset add --empty` writes upstream",
    },
]
