src/snapshots/changesette__changeset__tests__parses_frontmatter_with_comments_and_blank_lines.snap
---
source: src/changeset.rs
expression: "load_ok(\"comments-and-blank-lines\")"
---
[
    LoadedChange {
        file_name: "changesette-01H455WZ0H1X9PE0QB0MV1P1KG.md",
        bump: Patch,
        summary: "Frontmatter with a comment and a blank line",
    },
]
