src/snapshots/changesette__changeset__tests__rejects_a_changeset_that_also_targets_another_package.snap
---
source: src/changeset.rs
expression: "load_err(\"two-packages\")"
---
tests/fixtures/changeset/two-packages/changesette-01H455WZ0H1X9PE0QB0MV1P1KG.md: changeset targets package `ublacklist-docs`, but the manifest declares `ublacklist`
