src/snapshots/changesette__changeset__tests__rejects_a_custom_bump_type.snap
---
source: src/changeset.rs
expression: "load_err(\"custom-type\")"
---
tests/fixtures/changeset/custom-type/changesette-01h455wz0h1x9pe0qb0mv1p1kg.md: unknown bump type `none`; expected major, minor, or patch
