src/snapshots/changesette__changeset__tests__rejects_a_directory_with_an_adopted_name.snap
---
source: src/changeset.rs
expression: "load_err(\"md-directory\")"
---
tests/fixtures/changeset/md-directory/nested.md: Is a directory (os error 21)
