src/snapshots/changesette__changeset__tests__rejects_a_file_without_frontmatter.snap
---
source: src/changeset.rs
expression: "load_err(\"no-frontmatter\")"
---
tests/fixtures/changeset/no-frontmatter/changesette-01H455WZ0H1X9PE0QB0MV1P1KG.md: missing frontmatter (expected `---`-delimited YAML)
