src/snapshots/changesette__changeset__tests__rejects_a_frontmatter_only_file.snap
---
source: src/changeset.rs
expression: "load_err(\"frontmatter-only\")"
---
tests/fixtures/changeset/frontmatter-only/changesette-01h455wz0h1x9pe0qb0mv1p1kg.md: empty changeset (the summary is empty)
