src/snapshots/changesette__changeset__tests__rejects_a_missing_bump_value.snap
---
source: src/changeset.rs
expression: "load_err(\"null-bump\")"
---
tests/fixtures/changeset/null-bump/changesette-01H455WZ0H1X9PE0QB0MV1P1KG.md: invalid bump type; expected major, minor, patch, or none
