src/snapshots/changesette__changeset__tests__rejects_a_missing_directory.snap
---
source: src/changeset.rs
expression: "load_err(\"does-not-exist\")"
---
tests/fixtures/changeset/does-not-exist: changeset directory not found; run `changesette add` to create it
